<resources>
    <string name="app_name">Digital Class</string>
    <string name="regUserName">Enter the User Name</string>
    <string name="regPass">Enter the Password</string>
    <string name="regRePass">Retype the Password</string>
    <string name="regMobile">Enter your Mobile Number</string>
    <string name="regEmail">Enter your email address</string>
    <string name="Registration">Sign up</string>
    <string name="fullName">Enter Full Name</string>
    <string name="logIn">Log In</string>
    <string name="signIn">Sign In</string>
    <string name="fileName">Enter unique code for your file</string>
    <string name="fileCode">Enter unque code</string>
    <string name="fileNameNotUnique">Enter File name</string>
    <string name="fileDescription">Enter File Details</string>

</resources>
